; ModuleID = '/home/carl/AnghaBench/lede/package/libs/libnl-tiny/src/extr_genl_family.c_genl_family_add_grp.c'
source_filename = "/home/carl/AnghaBench/lede/package/libs/libnl-tiny/src/extr_genl_family.c_genl_family_add_grp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.genl_family = type { i32 }
%struct.genl_family_grp = type { i32, i32, i32 }

@NLE_NOMEM = common dso_local global i32 0, align 4
@GENL_NAMSIZ = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @genl_family_add_grp(%struct.genl_family* %0, i32 %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.genl_family*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca %struct.genl_family_grp*, align 8
  store %struct.genl_family* %0, %struct.genl_family** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  %9 = call %struct.genl_family_grp* @calloc(i32 1, i32 12)
  store %struct.genl_family_grp* %9, %struct.genl_family_grp** %8, align 8
  %10 = load %struct.genl_family_grp*, %struct.genl_family_grp** %8, align 8
  %11 = icmp eq %struct.genl_family_grp* %10, null
  br i1 %11, label %12, label %15

12:                                               ; preds = %3
  %13 = load i32, i32* @NLE_NOMEM, align 4
  %14 = sub nsw i32 0, %13
  store i32 %14, i32* %4, align 4
  br label %31

15:                                               ; preds = %3
  %16 = load i32, i32* %6, align 4
  %17 = load %struct.genl_family_grp*, %struct.genl_family_grp** %8, align 8
  %18 = getelementptr inbounds %struct.genl_family_grp, %struct.genl_family_grp* %17, i32 0, i32 2
  store i32 %16, i32* %18, align 4
  %19 = load %struct.genl_family_grp*, %struct.genl_family_grp** %8, align 8
  %20 = getelementptr inbounds %struct.genl_family_grp, %struct.genl_family_grp* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 4
  %22 = load i8*, i8** %7, align 8
  %23 = load i64, i64* @GENL_NAMSIZ, align 8
  %24 = sub nsw i64 %23, 1
  %25 = call i32 @strncpy(i32 %21, i8* %22, i64 %24)
  %26 = load %struct.genl_family_grp*, %struct.genl_family_grp** %8, align 8
  %27 = getelementptr inbounds %struct.genl_family_grp, %struct.genl_family_grp* %26, i32 0, i32 0
  %28 = load %struct.genl_family*, %struct.genl_family** %5, align 8
  %29 = getelementptr inbounds %struct.genl_family, %struct.genl_family* %28, i32 0, i32 0
  %30 = call i32 @nl_list_add_tail(i32* %27, i32* %29)
  store i32 0, i32* %4, align 4
  br label %31

31:                                               ; preds = %15, %12
  %32 = load i32, i32* %4, align 4
  ret i32 %32
}

declare dso_local %struct.genl_family_grp* @calloc(i32, i32) #1

declare dso_local i32 @strncpy(i32, i8*, i64) #1

declare dso_local i32 @nl_list_add_tail(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
